{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Player",
            "id": "d921d2ae-5733-42c5-aa8f-6a13914625d4",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "a67649a7-b3d2-4889-ab33-38cdca46e287",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SwitchCharacter",
                    "type": "Button",
                    "id": "5e14e7d8-0fc0-4040-9919-6873988670e3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "Movement",
                    "id": "eeac5b72-5f5f-4165-8ce9-c2b965cbd3c1",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "a2a2dd5e-acd3-41a3-bb84-3a25656058f4",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "319f91dd-36f9-49a4-8169-28c8a564dd4d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "a62794fd-42b9-4818-b57c-dce34a730655",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "f438c9c5-8bcd-46c9-8958-3945d404cb46",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e5b18e9f-5fb4-41aa-893e-b227efd8d0bd",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchCharacter",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "SwitchPlayer",
            "id": "6ab43bf5-6c1e-4220-8d69-15479edffac6",
            "actions": [
                {
                    "name": "Transparency",
                    "type": "Button",
                    "id": "a7f6b47d-dc91-4abd-b1fc-bd4cf7030519",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c4c645e3-414e-433f-89c0-4cb31242afe6",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Transparency",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Camera",
            "id": "3a99cdd5-985e-4a7e-b46c-df02166929f3",
            "actions": [
                {
                    "name": "RotateR",
                    "type": "Button",
                    "id": "e5b10beb-8334-4c40-acbc-a77bf2ec0395",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RotateL",
                    "type": "Button",
                    "id": "f761cf25-8f65-41f3-803a-bd55a9a25920",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "410b3003-6c92-4c14-b797-8091d14cea3c",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "742dd2a2-d079-4377-a054-dff97bfdbf32",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateL",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}